<resources>
    <string name="app_name">Orca Rewards</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_up_text">Don\'t have an account? <b>Sign up.</b></string>
    <string name="loading">Loading…</string>
    <string name="user_doesnt_exist">User doesn\'t exist</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="back_to_sign_in_text">Already have an account? <b>Log in.</b></string>
    <string name="action_sign_up">Sign up</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="watch">Watch</string>

    <string name="account_data">You have %s points so far.</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="change_password">Change password</string>
    <string name="redeem">Redeem points</string>
    <string name="redeem_text">Enter redeem points</string>
    <string name="redeem_short">Redeem</string>
    <string name="redeem_data_info"><![CDATA[You have <b>%s</b> points. You can redeem $1 for 1000 points. Enter value in multiples of 1000.]]></string>
    <string name="mail_msg">%s has requested for redemption of %s points. The value has been deducted from their original points.</string>

</resources>
