<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:checkable="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_watch"
            android:checkable="true"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/watch" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_redeem"
                android:icon="@drawable/ic_monetization_on_24dp"
                android:checkable="true"
                android:title="@string/redeem" />
            <item
                android:id="@+id/nav_change_pwd"
                android:icon="@drawable/ic_menu_manage"
                android:checkable="true"
                android:title="@string/change_password" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
